Greatly simplified Address and StreetAddress. Lots of miscellaneous cleanup. It currently just compiles and runs.