@@ -8,7 +8,6 @@ import gov.nysenate.sage.model.address.GeocodedAddress;
 import gov.nysenate.sage.model.geo.Geocode;
 import gov.nysenate.sage.model.geo.GeocodeQuality;
 import gov.nysenate.sage.model.geo.Point;
-import gov.nysenate.sage.util.GeocodeUtil;
 import gov.nysenate.sage.util.UrlRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,12 +15,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Repository
-public class HttpGoogleDao implements GoogleDao
-{
+public class HttpGoogleDao implements GoogleDao {
     private static final Logger logger = LoggerFactory.getLogger(HttpGoogleDao.class);
     private static final String DEFAULT_BASE_URL = "https://maps.googleapis.com/maps/api/geocode/json";
     private static final String GEOCODE_QUERY = "?address=%s&key=%s";
@@ -29,18 +27,14 @@ public class HttpGoogleDao implements GoogleDao
     private static final String ZIP_CODE_QUERY = "?components=postal_code:%s|country:US&key=%s";
     private static final ObjectMapper objectMapper = new ObjectMapper();
 
-    private String baseUrl;
-    private String apiKey;
+    private final String baseUrl;
+    private final String apiKey;
 
     @Autowired
     public HttpGoogleDao(Environment env) {
-        this.baseUrl = env.getGoogleGeocoderUrl();
+        String tempUrl = env.getGoogleGeocoderUrl();
+        this.baseUrl = tempUrl == null || tempUrl.isEmpty() ? DEFAULT_BASE_URL : tempUrl;
         this.apiKey = env.getGoogleGeocoderKey();
-    }
-
-    public String getBaseUrl()
-    {
-        return (this.baseUrl != null && !this.baseUrl.isEmpty()) ? this.baseUrl : DEFAULT_BASE_URL;
     }
 
     /**
@@ -51,35 +45,26 @@ public class HttpGoogleDao implements GoogleDao
      * @return          GeocodedAddress containing best matched Geocode.
      *                  null if there was a fatal error
      */
-    public GeocodedAddress getGeocodedAddress(Address address)
-    {
+    public GeocodedAddress getGeocodedAddress(Address address) {
         GeocodedAddress geocodedAddress = null;
 
-        if (address.getState().isEmpty()) {
-            address.setState("NY");
-        }
-
         try {
-            String formattedQuery = "";
-            if (GeocodeUtil.isZipCode(address)) {
+            String formattedQuery;
+            if (address.getAddr1().isEmpty() && address.getZip5() != null) {
                 logger.info("Input address is a zip code");
-                formattedQuery = String.format(ZIP_CODE_QUERY, URLEncoder.encode(address.getZip5(), "UTF-8"), apiKey);
+                formattedQuery = String.format(ZIP_CODE_QUERY, address.getZip5(), apiKey);
             }
             else {
-                formattedQuery = String.format(GEOCODE_QUERY, URLEncoder.encode(address.toString(), "UTF-8"), apiKey);
+                formattedQuery = String.format(GEOCODE_QUERY, URLEncoder.encode(address.toString(), StandardCharsets.UTF_8), apiKey);
             }
-            String url = getBaseUrl() + formattedQuery;
+            String url = baseUrl + formattedQuery;
             geocodedAddress = getGeocodedAddress(url);
             if (geocodedAddress == null) {
                 geocodedAddress = new GeocodedAddress(address);
             } else {
                 geocodedAddress.setAddress(address);
             }
-        }
-        catch (UnsupportedEncodingException ex) {
-            logger.error("UTF-8 encoding not supported!?", ex);
-        }
-        catch (NullPointerException ex) {
+        } catch (NullPointerException ex) {
             logger.error("Null pointer while performing google geocode!", ex);
         }
         return geocodedAddress;
@@ -96,7 +81,7 @@ public class HttpGoogleDao implements GoogleDao
         GeocodedAddress geocodedAddress = null;
         try {
             String formattedQuery = String.format(REV_GEOCODE_QUERY, point.toString(), apiKey);
-            String url = getBaseUrl() + formattedQuery;
+            String url = baseUrl + formattedQuery;
             geocodedAddress = getGeocodedAddress(url); // Response is identical to address->geocode response.
         }
         catch (NullPointerException ex) {
@@ -110,62 +95,63 @@ public class HttpGoogleDao implements GoogleDao
      * @param url String
      * @return GeocodedAddress, or null if no match
      */
-    private GeocodedAddress getGeocodedAddress(String url) {
+    private static GeocodedAddress getGeocodedAddress(String url) {
         GeocodedAddress geocodedAddress = null;
 
         try {
             String response = UrlRequest.getResponseFromUrl(url);
-            if (response != null) {
-                JsonNode node = objectMapper.readTree(response);
-                if (node.has("status") && node.get("status").asText().equals("OK")) {
-                    JsonNode results = node.get("results");
-                    if (!results.isArray() || results.size() < 1) return null;
-                    JsonNode result = results.get(0);
-                    String streetNumber = "", street = "", city = "", state = "", zip5 = "", zip4 = "";
-                    JsonNode addressComponents = result.get("address_components");
-                    for (JsonNode component : addressComponents) {
-                        for (JsonNode type : component.get("types")) {
-                            String typeText = type.asText();
-                            switch (typeText) {
-                                case "street_number":
-                                    streetNumber = component.get("long_name").asText();
-                                    break;
-                                case "route":
-                                    street = component.get("long_name").asText();
-                                    break;
-                                case "locality":
-                                    city = component.get("long_name").asText();
-                                    break;
-                                case "administrative_area_level_3":
-                                    if (city.equals("")) {
-                                        city = component.get("short_name").asText();
-                                    }
-                                    break;
-                                case "administrative_area_level_1":
-                                    state = component.get("short_name").asText();
-                                    break;
-                                case "postal_code":
-                                    zip5 = component.get("short_name").asText();
-                                    break;
-                                case "postal_code_suffix":
-                                    zip4 = component.get("short_name").asText();
-                                    break;
-                            }
+            if (response == null) {
+                return null;
+            }
+            JsonNode node = objectMapper.readTree(response);
+            if (node.has("status") && node.get("status").asText().equals("OK")) {
+                JsonNode results = node.get("results");
+                if (!results.isArray() || results.isEmpty()) return null;
+                JsonNode result = results.get(0);
+                String streetNumber = "", street = "", city = "", state = "", zip5 = "", zip4 = "";
+                JsonNode addressComponents = result.get("address_components");
+                for (JsonNode component : addressComponents) {
+                    for (JsonNode type : component.get("types")) {
+                        String typeText = type.asText();
+                        switch (typeText) {
+                            case "street_number":
+                                streetNumber = component.get("long_name").asText();
+                                break;
+                            case "route":
+                                street = component.get("long_name").asText();
+                                break;
+                            case "locality":
+                                city = component.get("long_name").asText();
+                                break;
+                            case "administrative_area_level_3":
+                                if (city.isEmpty()) {
+                                    city = component.get("short_name").asText();
+                                }
+                                break;
+                            case "administrative_area_level_1":
+                                state = component.get("short_name").asText();
+                                break;
+                            case "postal_code":
+                                zip5 = component.get("short_name").asText();
+                                break;
+                            case "postal_code_suffix":
+                                zip4 = component.get("short_name").asText();
+                                break;
                         }
                     }
-                    String addr1 = streetNumber + " " + street;
-                    Address address = new Address(addr1, "", city, state, zip5, zip4);
-                    JsonNode location = result.get("geometry").get("location");
-                    Double lat = location.get("lat").asDouble(0.0);
-                    Double lon = location.get("lng").asDouble(0.0);
-                    String geocodeType = result.get("types").get(0).asText();
-                    Geocode geocode = new Geocode(
-                            new Point(lat, lon), resolveGeocodeQuality(geocodeType), HttpGoogleDao.class.getSimpleName());
-                    geocodedAddress = new GeocodedAddress(address, geocode);
                 }
-                else if (node.has("status") && node.get("status").asText().equals("OVER_QUERY_LIMIT")) {
-                    logger.warn("Google geocoder is reporting that we have exceeded the query limit!");
-                }
+                String addr1 = streetNumber + " " + street;
+                Address address = new Address(addr1, "", city, state, zip5, zip4);
+                JsonNode location = result.get("geometry").get("location");
+                double lat = location.get("lat").asDouble(0.0);
+                double lon = location.get("lng").asDouble(0.0);
+                String geocodeType = result.get("types").get(0).asText();
+                Geocode geocode = new Geocode(
+                        new Point(lat, lon), resolveGeocodeQuality(geocodeType), HttpGoogleDao.class.getSimpleName());
+                geocodedAddress = new GeocodedAddress(address, geocode);
+            }
+            else if (node.has("status") && node.get("status").asText().equals("OVER_QUERY_LIMIT")) {
+                logger.warn("Google geocoder is reporting that we have exceeded the query limit!");
             }
         }
         catch (IOException ex) {
@@ -177,32 +163,18 @@ public class HttpGoogleDao implements GoogleDao
         return geocodedAddress;
     }
 
-    private GeocodeQuality resolveGeocodeQuality(String type)
-    {
-        switch (type) {
+    private static GeocodeQuality resolveGeocodeQuality(String type) {
+        return switch (type) {
             // House matches
-            case "premise":
-            case "subpremise":
-            case "point_of_interest":
-            case "park":
-            case "natural_feature":
-            case "airport":
-            case "street_address": return GeocodeQuality.HOUSE;
-            // Street level matches
-            case "route":
-            case "intersection": return GeocodeQuality.STREET;
-            // City matches
-            case "neighborhood":
-            case "sublocality":
-            case "locality": return GeocodeQuality.CITY;
-            // County match
-            case "administrative_area_level_2": return GeocodeQuality.COUNTY;
-            // State matches
-            case "administrative_area_level_1": return GeocodeQuality.STATE;
-            // Zip matches
-            case "postal_code": return GeocodeQuality.ZIP;
-            case "postal_code_suffix": return GeocodeQuality.ZIP_EXT;
-        }
-        return GeocodeQuality.UNKNOWN;
+            case "premise", "subpremise", "point_of_interest", "park", "natural_feature", "airport", "street_address" ->
+                    GeocodeQuality.HOUSE;
+            case "route", "intersection" -> GeocodeQuality.STREET;
+            case "neighborhood", "sublocality", "locality" -> GeocodeQuality.CITY;
+            case "administrative_area_level_2" -> GeocodeQuality.COUNTY;
+            case "administrative_area_level_1" -> GeocodeQuality.STATE;
+            case "postal_code" -> GeocodeQuality.ZIP;
+            case "postal_code_suffix" -> GeocodeQuality.ZIP_EXT;
+            default -> GeocodeQuality.UNKNOWN;
+        };
     }
 }
