@@ -4,23 +4,19 @@ import gov.nysenate.sage.dao.provider.usps.HttpUSPSAMSDao;
 import gov.nysenate.sage.model.address.Address;
 import gov.nysenate.sage.model.result.AddressResult;
 import gov.nysenate.sage.model.result.ResultStatus;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import javax.annotation.Nonnull;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Provider implementation for the USPS AMS WebService.
  */
 @Service
-public class USPSAMS implements AddressService
-{
-    private final Logger logger = LoggerFactory.getLogger(this.getClass());
-    private HttpUSPSAMSDao httpUSPSAMSDao;
+public class USPSAMS implements AddressService {
+    private final HttpUSPSAMSDao httpUSPSAMSDao;
 
     @Autowired
     public USPSAMS(HttpUSPSAMSDao httpUSPSAMSDao) {
@@ -28,9 +24,9 @@ public class USPSAMS implements AddressService
     }
 
     /** {@inheritDoc} */
+    @Nonnull
     @Override
-    public AddressResult validate(Address address) 
-    {
+    public AddressResult validate(Address address) {
         if (address != null && !address.isEmpty()) {
             AddressResult result = httpUSPSAMSDao.getValidatedAddressResult(address);
             if (result != null) {
@@ -43,8 +39,7 @@ public class USPSAMS implements AddressService
 
     /** {@inheritDoc} */
     @Override
-    public List<AddressResult> validate(List<Address> addresses)
-    {
+    public List<AddressResult> validate(List<Address> addresses) {
         if (addresses == null) return null;
 
         if (!addresses.isEmpty()) {
@@ -58,7 +53,7 @@ public class USPSAMS implements AddressService
                 }
                 return results;
             }
-            //TODO Determine if this else block should stay. It could be unreachable with current code flow changes
+            // TODO Determine if this else block should stay. It could be unreachable with current code flow changes
             else {
                 List<AddressResult> errorResults = new ArrayList<>();
                 for (int i = 0; i < addresses.size(); i++) {
@@ -67,16 +62,14 @@ public class USPSAMS implements AddressService
                 return errorResults;
             }
         }
-
-        return Arrays.asList(new AddressResult(this.getClass(), ResultStatus.MISSING_ADDRESS));
+        return List.of(new AddressResult(this.getClass(), ResultStatus.MISSING_ADDRESS));
     }
 
     /** {@inheritDoc} */
+    @Nonnull
     @Override
-    public AddressResult lookupCityState(Address address) 
-    {
-        if(address != null && !address.isEmpty() && address.getZip5() != null)
-        {
+    public AddressResult lookupCityState(Address address) {
+        if (address != null && !address.isEmpty() && address.getZip5() != null) {
             AddressResult result = httpUSPSAMSDao.getCityStateResult(address);
             if (result != null) {
                 result.setSource(this.getClass());
@@ -88,30 +81,15 @@ public class USPSAMS implements AddressService
 
     /** {@inheritDoc} */
     @Override
-    public List<AddressResult> lookupCityState(List<Address> addresses)
-    {
-        if(addresses != null && !addresses.isEmpty())
-        {
+    public List<AddressResult> lookupCityState(List<Address> addresses) {
+        if (addresses != null && !addresses.isEmpty()) {
             List<AddressResult> results = httpUSPSAMSDao.getCityStateResults(addresses);
             if (results != null && results.size() == addresses.size()) {
                 return results;
             }
-            return Arrays.asList(new AddressResult(this.getClass(), ResultStatus.NO_ADDRESS_VALIDATE_RESULT));
+            return List.of(new AddressResult(this.getClass(), ResultStatus.NO_ADDRESS_VALIDATE_RESULT));
         }
-        return Arrays.asList(new AddressResult(this.getClass(), ResultStatus.MISSING_ADDRESS));
+        return List.of(new AddressResult(this.getClass(), ResultStatus.MISSING_ADDRESS));
     }
 
-    /** {@inheritDoc} */
-    @Override
-    public AddressResult lookupZipCode(Address address) 
-    {
-        return validate(address);
-    }
-
-    /** {@inheritDoc} */
-    @Override
-    public List<AddressResult> lookupZipCode(List<Address> addresses)
-    {
-        return validate(addresses);
-    }
 }
